@@ -16,6 +16,8 @@
         <platform>all</platform>
         <language>et</language>
         <news>
+- 0.0.17 - regexi parandus
+
 - 0.0.16 - Kodi Matrix tugi, väikesed muudatused
         </news>
         <assets>
